with delete functionalityu

--- a/static/css/t.css
+++ b/static/css/t.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Anurati;
-  src: url(Anurati-Regular.woff) format('woff2');
+  src: url(font/Anurati-Regular.woff) format('woff2');
 }
 
 html,body {
