--- a/templates/bingo1.html
+++ b/templates/bingo1.html
@@ -42,7 +42,7 @@
     
 
 <script>
-user=1
+
     /*
     link retrieving 
     */
@@ -50,6 +50,8 @@ user=1
     url= new URL(window.location.href).searchParams;
     
     roomname=url.get('room');
+    user=url.get('user')
+    console.log(user)
 
 
 
