--- a/templates/invites.html
+++ b/templates/invites.html
@@ -1,5 +1,5 @@
 <html>
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/[css file]') }}"> 
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
 <script>
     var socket = io.connect('http://127.0.0.1:5000/sendinvite');
