--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"> 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/stylus.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/social.css') }}">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <body>
 
         <div class="box">
@@ -12,6 +14,7 @@
           <div class="hero-container">
             <div class="environment"></div>
             <h2 class="hero glitch layers" data-text="BINGO"><span>BINGO</span></h2>
+            <br><br><br>
           </div>
             
 
@@ -50,11 +53,31 @@
                 Register
               </a>
             </form>
+            <br><br><br><br><br><br>
             <div class="error" id="error">
               {% for message in get_flashed_messages() %}
                   <p>{{ message }}</p>
               {% endfor %}</div>
           </div>
+            
+
+
+
+          <div class="wrapper">
+            <ul>
+              <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+              <li class="twitter"><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+              <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+              <li class="google"><a href="#"><i class="fa fa-google fa-2x" aria-hidden="true"></i></a></li>
+              <li class="whatsapp"><a href="#"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+
+
+
+
+
+
           <script>
    const box = document.getElementById('error');
    box.addEventListener('click', () => {
