--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,11 +1,90 @@
 <html>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/stylus1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/social.css') }}">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <body>
-        <form action="/reg" method="POST">
-            username<input type="text" name="username">
-            password<input type="text" name="password">
-            <input type="submit" value="register">
+
+        <div class="box">
 
 
-        </form>
+          
+
+          <div class="hero-container">
+            <div class="environment"></div>
+            <h2 class="hero glitch layers" data-text="BINGO"><span>BINGO</span></h2>
+            <br><br><br>
+          </div>
+            
+
+
+
+
+
+
+
+            
+         </div>
+        
+        <div class="login-box">
+            <h2>Register</h2>
+            <form action="/reg" method="POST" id="form1">
+              <div class="user-box">
+                <input type="text" name="username" required="username">
+                <label>Username</label>
+              </div>
+              <div class="user-box">
+                <input type="password" name="password" required="password">
+                <label>Password</label>
+              </div>
+              <a onclick=" document.getElementById('form1').submit();">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Submit
+              </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a onclick= "window.location='/login'">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Login
+              </a>
+            </form>
+            <br><br><br><br><br><br>
+            <div class="error" id="error">
+              {% for message in get_flashed_messages() %}
+                  <p>{{ message }}</p>
+              {% endfor %}</div>
+          </div>
+            
+
+
+
+          <div class="wrapper">
+            <ul>
+              <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+              <li class="twitter"><a href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+              <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+              <li class="google"><a href="#"><i class="fa fa-google fa-2x" aria-hidden="true"></i></a></li>
+              <li class="whatsapp"><a href="#"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+
+
+
+
+
+
+          <script>
+   const box = document.getElementById('error');
+   box.addEventListener('click', () => {
+  box.remove();
+});
+
+          </script>
+          
     </body>
 </html>
