--- a/templates/game.html
+++ b/templates/game.html
@@ -31,7 +31,13 @@ socket.on('connect', function() {
 
 
 <body >
+    <ul>
+        <li>
+    <a href="/home">home</a></li>
+    <li><a href="#">online users</a></li>
+    <li><a href="#">invites</a></li>
     
+</ul>
     <center>
        
             <span id=1 class="sign1">b</span><span id=2 class="sign1">i&nbsp;</span><span id=3 class="sign1">n</span><span id="4" class="sign1">g</span><span id=5 class="sign1">o</span>
