--- a/static/css/t.css
+++ b/static/css/t.css
@@ -7,10 +7,7 @@ html,body {
   height: 100%;
     width: 100%;
   background-color: #141114;
-  background-image: linear-gradient(335deg, black 23px, transparent 23px),
-    linear-gradient(155deg, black 23px, transparent 23px),
-    linear-gradient(335deg, black 23px, transparent 23px),
-    linear-gradient(155deg, black 23px, transparent 23px);
+  background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png");
   background-size: 58px 58px;
   background-position: 0px 2px, 4px 35px, 29px 31px, 34px 6px;
 }
