--- a/static/css/online.css
+++ b/static/css/online.css
@@ -1,12 +1,17 @@
+body {
+   background-color: rgb(24, 29, 28);
+   
+ }
 
+ 
   
 
   
  .top{
 
-    height: 10%;
+   
     
-    background-color: green;
+    background-color: rgb(24, 29, 28);
 
  }
 
@@ -15,24 +20,193 @@
  .left {
     float:left;
   width:30%;
-  background-color:yellow;
+  background-color:rgb(60, 92, 89);
+border-radius: 10px;
+background: rgba(85, 5, 92, 0.582);
+box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px ;
+
+
   }
   
   /* Control the right side */
   .right {
     float: right;
     width: 70%;
-    background-color:#00FF00;
+    background-color:#171818;
     height:80%;
-    overflow:scroll;
+    border-radius: 25px;
+    background-image: repeating-linear-gradient(
+      to bottom,
+      transparent 7px,
+      rgba(0, 0, 0, 0.8) 9px,
+      rgba(0, 0, 0, 0.8) 13px,
+      transparent 13px
+    );
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19);
+    
     
   }
 
  .chatbox
- {background-color: aqua;
+ {
     width: 70%;
     float: right;
     
+    
 
 
+ }
+
+ #chat-text{
+
+   -webkit-text-fill-color: aliceblue;
+ }
+
+
+
+
+ #text{
+
+   
+    border-radius: 10px;
+   width: 83.3%;
+   padding: 15px 12px;
+   margin-bottom: 5px;
+   border: 1px solid #1f1d1d;
+   font-size: large;
+   font-weight: bold;
+   background: #070404;
+   color: rgb(11, 186, 235);
+    
+ }
+
+
+
+
+ .glow-on-hover {
+   width: 220px;
+   height: 50px;
+   border: none;
+   outline: none;
+   color: #fff;
+   background: #111;
+   cursor: pointer;
+   position: relative;
+   z-index: 0;
+   border-radius: 10px;
+}
+
+.glow-on-hover:before {
+   content: '';
+   background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+   position: absolute;
+   top: -2px;
+   left:-2px;
+   background-size: 400%;
+   z-index: -1;
+   filter: blur(5px);
+   width: calc(100% + 4px);
+   height: calc(100% + 4px);
+   animation: glowing 20s linear infinite;
+   opacity: 0;
+   transition: opacity .3s ease-in-out;
+   border-radius: 10px;
+}
+
+.glow-on-hover:active {
+   color: #000
+}
+
+.glow-on-hover:active:after {
+   background: transparent;
+}
+
+.glow-on-hover:hover:before {
+   opacity: 1;
+}
+
+.glow-on-hover:after {
+   z-index: -1;
+   content: '';
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   background: #111;
+   left: 0;
+   top: 0;
+   border-radius: 10px;
+}
+
+@keyframes glowing {
+   0% { background-position: 0 0; }
+   50% { background-position: 400% 0; }
+   100% { background-position: 0 0; }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.btn {
+   border: none;
+   display: block;
+   text-align: center;
+   cursor: pointer;
+   text-transform: uppercase;
+   width: 300px;
+   outline: none;
+   overflow: hidden;
+   position: relative;
+   color: #fff;
+   font-weight: 700;
+   font-size: 15px;
+   background-color: rgb(34, 34, 34);
+   padding: 17px 60px;
+   margin: 0 auto;
+   box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+ }
+ 
+ .btn span {
+   position: relative; 
+   z-index: 1;
+   
+ }
+ 
+ .btn:after {
+  
+   position: absolute;
+   left: 0;
+   top: 0;
+   height: 490%;
+   width: 140%;
+   background: #78c7d2;
+   -webkit-transition: all .5s ease-in-out;
+   transition: all .5s ease-in-out;
+   -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
+   transform: translateX(-98%) translateY(-25%) rotate(45deg);
+   content: "fsdfsd";
+ }
+ 
+ .btn:hover:after {
+   -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+   transform: translateX(-9%) translateY(-25%) rotate(45deg);
+   
+ }
+ 
+
+ .btn:active {
+   content: "Reply!"
  }
