--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 <html>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"> 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/stylus.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/error.css') }}">
