--- a/templates/online.html
+++ b/templates/online.html
@@ -1,5 +1,9 @@
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/online.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/search.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/link.css') }}"> 
+    <script src="https://kit.fontawesome.com/a0bfb68051.js"></script>
 
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
 <script>
@@ -13,7 +17,7 @@ socket.on('users',function(u) {
     document.getElementById("u").innerHTML = "";
     for(a=0;a<u.length;a++)
  {
-    document.getElementById("u").innerHTML+="<li >"+"<button "+"value="+u[a]+"   onclick=f(this.value)>"+u[a]+"</button>"+"</li>";
+    document.getElementById("u").innerHTML+="<li >"+"<br><button class='btn'"+"value="+ u[a]+" onclick=f(this.value)>"+"<span>"+u[a]+"</span>"+"</button>"+"</li>";
  }
     console.log(u[a]);
 
@@ -29,9 +33,19 @@ socket.on('users',function(u) {
     <body>
         
        <div class="top">
-        <a href="/invites">invites</a><br><br>
-        <input type="text" id="Search" onkeyup="search()" 
-        placeholder="search user" title="Type in a name"><br><br>
+        <p>&nbsp;<a href="/home" id="style-2" data-replace="HOME"><span>HOME</span></a>&nbsp;&nbsp;&nbsp;<a href="/invites" id="style-2" data-replace="INVITES"><span>INVITES</span></a>&nbsp;&nbsp;&nbsp;<a href="/logout" id="style-2" data-replace="LOGOUT"><span>LOGOUT</span></a></p> <br><br>
+
+
+
+
+        
+        <div class="search-box">
+            <input class="in" type="text" id="Search" onkeyup="search()" name="" value="" placeholder="search">
+            <button id=bu type="button" name="button"><i id=li class="fas fa-search"></i></button>
+          
+          </div>
+        
+        <br><br>
 
        </div>
         <div class="left">
@@ -50,7 +64,7 @@ socket.on('users',function(u) {
             
             </div>
             <div class="chatbox">
-                <input type="text" id="text"><button onclick="sendmsg()">send</button>
+                <input type="text" id="text"><button  class="glow-on-hover"  onclick="sendmsg()">send</button>
             </div>
 
 
@@ -119,7 +133,7 @@ deletemsg();
 
 function displaymsg(m)
 {
- document.getElementById("ff").innerHTML+="<li>"+m[0]+'<br>&nbsp;&nbsp;&nbsp;&nbsp;'+m[1]+"</li>"
+ document.getElementById("ff").innerHTML+="<li id='chat-text'>"+m[0]+'<br>&nbsp;&nbsp;&nbsp;&nbsp;'+m[1]+"</li>"
 
 
 }
