--- a/static/css/online.css
+++ b/static/css/online.css
@@ -1,8 +1,16 @@
 body {
    background-color: rgb(24, 29, 28);
-   
  }
+li{
 
+  list-style-type:none;
+}
+
+
+li:hover{
+  
+  border-bottom: #0a0a0a 0.5px solid;
+}
  
   
 
@@ -18,15 +26,19 @@ body {
 
  /* Control the left side */
  .left {
+ 
     float:left;
   width:30%;
-  background-color:rgb(60, 92, 89);
+  
 border-radius: 10px;
-background: rgba(85, 5, 92, 0.582);
-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px ;
 
+box-shadow: 8px -21px 90px -8px rgba(0,0,0,0.45),
+-14px 43px 65px -11px rgba(0,0,0,0.45),
+0px 25px 20px -20px rgba(0,0,0,0.45),
+-36px -49px 146px -14px rgba(0,0,0,0.45);
 
   }
+ 
   
   /* Control the right side */
   .right {
@@ -57,19 +69,32 @@ box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px ;
 
  }
 
- #chat-text{
-
+ /*#chat-text{
+   font-size: 19px;
+   font-family: monospace;
    -webkit-text-fill-color: aliceblue;
- }
+ }*/
+
+ #name-chat{
+  font-size: 19px;
+  font-family: monospace;
+  -webkit-text-fill-color: rgb(238, 34, 238);
+}
 
 
+#cmsg{
+  font-size: 17px;
+  font-family: monospace;
+  -webkit-text-fill-color: rgb(238, 201, 34);
+
+}
 
 
  #text{
 
    
     border-radius: 10px;
-   width: 83.3%;
+   width: 83%;
    padding: 15px 12px;
    margin-bottom: 5px;
    border: 1px solid #1f1d1d;
@@ -157,56 +182,90 @@ box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px ;
 
 
 
+.btn{
 
-
-
-.btn {
-   border: none;
-   display: block;
-   text-align: center;
-   cursor: pointer;
-   text-transform: uppercase;
-   width: 300px;
-   outline: none;
-   overflow: hidden;
-   position: relative;
-   color: #fff;
-   font-weight: 700;
-   font-size: 15px;
-   background-color: rgb(34, 34, 34);
-   padding: 17px 60px;
-   margin: 0 auto;
-   box-shadow: 0 5px 15px rgba(0,0,0,0.20);
- }
- 
- .btn span {
-   position: relative; 
-   z-index: 1;
-   
- }
- 
- .btn:after {
+  width:300px;
   
-   position: absolute;
-   left: 0;
-   top: 0;
-   height: 490%;
-   width: 140%;
-   background: #78c7d2;
-   -webkit-transition: all .5s ease-in-out;
-   transition: all .5s ease-in-out;
-   -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
-   transform: translateX(-98%) translateY(-25%) rotate(45deg);
-   content: "fsdfsd";
- }
- 
- .btn:hover:after {
-   -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
-   transform: translateX(-9%) translateY(-25%) rotate(45deg);
-   
- }
- 
+  font-size: 20px;
+  font-family: monospace;
+  
+}
 
- .btn:active {
-   content: "Reply!"
- }
+.btn div{
+  color: #eca710;
+}
+
+
+
+
+
+
+    .btn:hover{cursor: pointer}
+    .btn {
+      background: transparent; outline: none;
+      position: relative;
+      color: #5e5858;
+    border: 2px ;
+      padding: 15px 50px;
+      overflow: hidden;
+    }
+
+    /*button:before (attr data-hover)*/
+    .btn:hover:before{opacity: 1; transform: translate(0,0);}
+    .btn:before{
+      content: attr(data-hover);
+      position: absolute;
+      top: 1.1em; left: 0;
+      width: 100%;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      font-weight: 800;
+      font-size: .8em;
+      opacity: 0;
+      transform: translate(-100%,0);
+      
+      transition: all .3s ease-in-out;
+      color: #53f733;
+     
+
+      
+      box-shadow: 0px 60px 49px -28px rgba(0,0,0,0.6),
+      
+
+      
+      
+      
+    }
+
+
+
+    .btn:hover{
+      background-color:rgb(24, 29, 28);
+      color:#28fa14;
+      border-radius: 3px;
+    }
+      /*button div (button text before hover)*/
+      .btn:hover div{opacity: 0; transform: translate(100%,0)}
+      .btn div{
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        font-weight: 800;
+        font-size: .8em;
+        transition: all .3s ease-in-out;
+        
+        
+      }
+
+
+
+
+#img{
+  position: relative;
+  top:10px; 
+  box-shadow: 8px -21px 90px -8px rgba(0,0,0,0.45),
+  -14px 43px 65px -11px rgba(0,0,0,0.45),
+  0px 25px 20px -20px rgba(0,0,0,0.45),
+  -36px -49px 146px -14px rgba(0,0,0,0.45);
+
+
+}
