--- a/templates/invites.html
+++ b/templates/invites.html
@@ -20,7 +20,7 @@ socket.on('users',function(u)
     for (i=0;i<l;i++)
     {
    
-    document.getElementById("u").innerHTML+='<div class="container"><div class="card"><div class="face face1"><div class="content"><i class="fab fa-windows"></i>            <h3><img src=/static/image/mail-256.png><br>You Got An Invitation From '+u[i][3]+'</h3></div></div><div class="face face2"><div class="content"><p>room name is '+u[0][1] +'</p><a id=accept href="bingo?room='+u[i][1]+'&user=2" value='+u[i][1]+' type="button" onclick=accept(this.value)>Accept</a><a href="#" type="button">Reject</a></div></div></div><br><br><br>'
+    document.getElementById("u").innerHTML+='<div class="container"><div class="card"><div class="face face1"><div class="content"><i class="fab fa-windows"></i>            <h3><img src=/static/image/mail-256.png><br>You Got An Invitation From '+u[i][3]+'</h3></div></div><div class="face face2"><div class="content"><p>room name is '+u[i][1] +'</p><a id=accept href="bingo?room='+u[i][1]+'&user=2" value='+u[i][1]+' type="button" onclick=accept(this.value)>Accept</a><a href=# type="button" onclick=reject(this.value)>Reject</a></div></div></div><br><br><br>'
  
 console.log( typeof(u))
     console.log(u["1"]);
@@ -51,12 +51,24 @@ function accept(r){
 
 
 }/* remove link from db after user accept or rehject the link */
-function reject()
+function reject(r)
 {
   socket.emit('removelink',r);
+  remove_link_from_screen()
 
 }
 
+
+
+
+
+
+function remove_link_from_screen()
+{const d = document.querySelector('.container');
+d.remove()
+
+
+}
 </script>
 
 </html>
